Updated service discovery app name

--- a/service-discovery/src/main/resources/application.yml
+++ b/service-discovery/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 info.component: Service Discovery Server
 
-spring.application.name: EUREKA-SERVER
+spring.application.name: SERVICE-DISCOVERY-SERVER
 
 server.port: 8080
 
