--- a/service-discovery/build.gradle
+++ b/service-discovery/build.gradle
@@ -1,4 +1,4 @@
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1.SNAPSHOT'
 
 // Spring boot builds executable jar file
 springBoot {
@@ -15,6 +15,7 @@ jar {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile('org.springframework.cloud:spring-cloud-starter-eureka-server')
+
     runtime('org.springframework.boot:spring-boot-devtools')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
