--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,16 @@
 buildscript {
     ext {
         springBootVersion = '1.5.2.RELEASE'
+        petclinicPluginsVersion = '0.0.2'
     }
     repositories {
         mavenCentral()
+        jcenter()
+        mavenLocal()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("com.epam.petclinic:petclinic-plugins:${petclinicPluginsVersion}")
     }
 }
 
