up petclinic-plugin version

--- a/auth-server/gradle.properties
+++ b/auth-server/gradle.properties
@@ -3,7 +3,8 @@ jdbcURL=jdbc:postgresql://localhost:5432/
 driverName=org.postgresql.Driver
 databaseName=auth_server
 admin=postgres
-username=pc_auth_admin
+dbAdminName=pc_auth_admin
+dbAdminPassword=root
 password=root
 changeLogPath=auth-server/src/main/resources/db/changelog/db.changelog.xml
 schemaName=public
